<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign"
    tools:context=".ui.activate_mobile.ActivateMobile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/rec_sign" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/mobile_title"
        android:textColor="@color/colorAccent"
        android:textSize="15pt"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guid" />


    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        app:ccp_textSize="7pt"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFullName="false"
        app:ccp_showPhoneCode="true"
        app:ccp_showNameCode="true"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@id/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guid" />

    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:inputType="phone"
        android:gravity="center"

        android:background="@drawable/edit_border"
        android:hint="@string/enter_num_edit"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintTop_toTopOf="@+id/guid" />

    <Button
        android:id="@+id/next"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_btn"
        android:text="@string/number_btn"
        android:textColor="#FFF"
        android:textSize="12pt"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

</androidx.constraintlayout.widget.ConstraintLayout>