<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_sign"
    tools:context=".ui.registerdata.RegisterData">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/rec_sign" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/your_info_title"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="@id/guid2"
        app:layout_constraintBottom_toTopOf="@+id/guid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guid">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:textSize="9pt"
            android:background="@drawable/edit_border"
            android:hint="First Name"
            />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:textSize="9pt"
            android:background="@drawable/edit_border"
            android:hint="Last Name" />
    </LinearLayout>


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        android:background="@drawable/edit_border"
        android:hint="@string/gender"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/birth_date"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/edit_border"
        android:hint="Birthdate"
        android:textSize="9pt"
        android:focusable="false"
        android:longClickable="false"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender" />



    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/edit_border"
        android:hint="your weigth"
        android:inputType="numberDecimal"
        android:textSize="9pt"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/edit_border"
        android:hint="your height"
        android:textSize="9pt"
        android:inputType="numberDecimal"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />


    <Button
        android:id="@+id/submit"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_btn"
        android:text="@string/submit"
        android:textColor="#FFF"
        android:textSize="12pt"
        android:layout_marginTop="24dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/guid3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".24" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".17" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".88" />

</androidx.constraintlayout.widget.ConstraintLayout>